<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>

        <variable
            name="isOwner"
            type="Boolean" />

        <variable
            name="cctvModel"
            type="com.espresso.pbmobile.admin.AdminOptionModel" />

        <variable
            name="stationStateModel"
            type="com.espresso.pbmobile.admin.AdminOptionModel" />

        <variable
            name="gasPriceModel"
            type="com.espresso.pbmobile.admin.AdminOptionModel" />

        <variable
            name="loyaltyProductsModel"
            type="com.espresso.pbmobile.admin.AdminOptionModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/admin_console_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".admin.AdminConsoleActivity">

        <View
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/dark_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/history_header"
            style="@style/Text.Title.White"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="16dp"
            android:text="@{isOwner ? @string/toolbar_owner_panel : @string/toolbar_worker_panel}"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toStartOf="@+id/toolbar"
            app:layout_constraintStart_toEndOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintBottom_toBottomOf="@+id/toolbar"
            app:layout_constraintEnd_toStartOf="@+id/history_header"
            app:layout_constraintStart_toEndOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/monitoring_button"
            layout="@layout/item_admin_options"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="92dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            bind:model="@{cctvModel}" />

        <include
            android:id="@+id/station_state_button"
            layout="@layout/item_admin_options"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="92dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            bind:model="@{stationStateModel}" />

        <include
            android:id="@+id/station_prices_button"
            layout="@layout/item_admin_options"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/monitoring_button"
            bind:model="@{gasPriceModel}" />

        <include
            android:id="@+id/loyalty_program_button"
            layout="@layout/item_admin_options"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/station_state_button"
            bind:model="@{loyaltyProductsModel}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
