<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="com.espresso.pbmobile.R" />
        <import type="android.view.View" />

        <variable
            name="model"
            type="com.espresso.data.models.profile.UserProfile" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="date"
            type="String" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dashboard_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.dashboard.DashboardFragment">

        <TextView
            android:id="@+id/welcome_text"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@{String.format(context.getString(R.string.text_hi),model.nickname)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/admin_button"
            style="@style/Text.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_orange_outline_rounded"
            android:text="@string/action_admin_panel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <include
            android:id="@+id/login_view"
            layout="@layout/view_dashboard_unregistered_log"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="16dp"
            android:visibility="@{model.unregistered ? View.VISIBLE : View.GONE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

        <include
            android:id="@+id/points_view"
            layout="@layout/view_dashboard_banner"
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="16dp"
            android:visibility="@{model.unregistered ? View.INVISIBLE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_text"
            bind:points="@{model.points}" />

        <Button
            android:id="@+id/refuel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/btn_orange_outline_rounded"
            android:text="@string/action_refuel"
            android:textSize="72sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/points_view" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="@{loading ? View.VISIBLE : View.GONE }"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refuel_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/booking_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="@{model.unregistered ? View.GONE : View.VISIBLE}"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/refuel_button">

            <View
                android:id="@+id/background"
                android:layout_width="0dp"
                android:layout_height="170dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/view_gray_with_stroke"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/wash_calendar"
                app:layout_constraintBottom_toTopOf="@id/car_wash_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.333"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textView34"
                style="@style/Text.H1.White"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/header_closest_date"
                app:layout_constraintBottom_toTopOf="@+id/car_wash_button"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image"
                app:layout_constraintTop_toTopOf="@+id/image"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Text.H1.White"
                android:text="@{date}"
                app:layout_constraintEnd_toEndOf="@+id/textView34"
                app:layout_constraintStart_toStartOf="@+id/textView34"
                app:layout_constraintTop_toBottomOf="@+id/textView34"
                tools:text="21.03.2020"/>

            <Button
                android:id="@+id/car_wash_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_orange_outline"
                android:fontFamily="@font/roboto_bold2"
                android:paddingTop="8sp"
                android:paddingBottom="8dp"
                android:text="@string/action_book_car_wash"
                android:textColor="@color/dark_blue"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@id/background"
                app:layout_constraintEnd_toEndOf="@id/background"
                app:layout_constraintStart_toStartOf="@id/background" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
