<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data />

    <FrameLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".main.MainActivity">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/bottom_navigation_height" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_shadow_height"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/bottom_shadow_margin_bottom"
            android:background="@drawable/shadow_view" />

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_nav"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_navigation_height"
            android:layout_gravity="bottom"
            android:background="@drawable/bg_orange_gradient"
            app:itemIconSize="24dp"
            app:itemIconTint="@color/menu_color_selector"
            app:itemTextColor="@color/menu_color_selector" />

    </FrameLayout>
</layout>
