<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="model"
            type="com.espresso.pbmobile.main.refueling.RefuelFragmentViewModel" />

        <variable
            name="loading"
            type="Boolean" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        tools:context=".main.refueling.RefuelingFragment">

        <include
            android:id="@+id/distributor_view"
            layout="@layout/view_refuel_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            bind:model="@{model}" />

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="44dp"
            android:src="@drawable/r_car"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pay_button"
            app:layout_constraintHorizontal_bias="0.534"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/refuel_gun_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@{model.refuelImageResolver(context)}"
            app:layout_constraintBottom_toBottomOf="@+id/car_image"
            app:layout_constraintEnd_toStartOf="@+id/car_image"
            app:layout_constraintHorizontal_bias="0.85"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/refuel_percentage"
            style="@style/Text.H1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{model.detailsModel.percentageText}"
            app:layout_constraintBottom_toBottomOf="@+id/car_image"
            app:layout_constraintEnd_toEndOf="@+id/car_image"
            app:layout_constraintStart_toStartOf="@+id/car_image"
            app:layout_constraintTop_toTopOf="@+id/car_image"
            app:layout_constraintVertical_bias="0.60" />

        <Button
            android:id="@+id/pay_button"
            style="@style/Text.H2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_pay"
            android:enabled="@{model.payButtonEnabled ? true : false}"
            android:text="@string/action_pay"
            app:layout_constraintBottom_toTopOf="@+id/refuel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/car_image" />

        <Button
            android:id="@+id/refuel_button"
            style="@style/Text.H2"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/btn_refuel"
            android:enabled="@{model.fuelButtonEnabled ? true : false}"
            android:text="@{model.fueling ? @string/action_stop : @string/action_refuel}"
            app:layout_constraintBottom_toBottomOf="@id/car_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pay_button" />

        <ImageView
            android:id="@+id/history_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_history"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="@{model.historyButtonVisible ? View.VISIBLE : View.INVISIBLE}"
            app:layout_constraintBottom_toTopOf="@id/pay_button"
            app:layout_constraintEnd_toEndOf="@+id/pay_button"
            app:layout_constraintStart_toStartOf="@+id/pay_button"
            app:layout_constraintTop_toBottomOf="@+id/distributor_view" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{loading ? View.VISIBLE : View.GONE }"
            app:layout_constraintBottom_toBottomOf="@+id/distributor_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
