...
        <variable
            name="model"
            type="com.espresso.pbmobile.history.HistoryActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/history_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".history.HistoryActivity">

        <View
            android:id="@+id/toolbar"
...
